# fastapi_template

./: README.md  alembic.ini  pyproject.toml
api_template/: __main__.py  conftest.py  logging.py  settings.py
api_template/db/: dependencies.py  meta.py  session.py  transactional.py  utils.py
api_template/db/migrations/: env.py
api_template/db/migrations/versions/: 20230104_1128_96650912d354_init.py
api_template/db/models/: __init__.py  user.py
api_template/db/repositoies/: base_repo.py  user_repo.py
api_template/errors/: http_res_err.py
api_template/services/: __init__.py
api_template/tests/: __init__.py
api_template/web/: application.py  lifetime.py
api_template/web/api/: router.py
api_template/web/api/api_v1/: api.py
api_template/web/api/api_v1/endpoint/users/: schema.py  user_api.py
api_template/web/api/docs/: __init__.py
api_template/web/api/monitoring/: __init__.py
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
